--- a/css/style.css
+++ b/css/style.css
@@ -17,6 +17,10 @@ main {
 main .mobile-nav {
   display: none;
 }
+main .mobile-nav #menu-items {
+  display: none;
+  flex-direction: column;
+}
 @media (max-width: 600px) {
   main .mobile-nav {
     display: flex;
@@ -28,27 +32,15 @@ main nav {
   align-items: center;
   justify-content: center;
 }
+main nav .navimages {
+  display: flex;
+  align-items: center;
+}
 @media (max-width: 600px) {
   main nav {
     flex-direction: column;
     align-items: flex-start;
     justify-content: flex-start;
-  }
-}
-main nav input {
-  display: none;
-}
-main nav label {
-  color: white;
-  display: none;
-}
-@media (max-width: 600px) {
-  main nav label {
-    display: block;
-    position: absolute;
-    padding-left: 20rem;
-    padding-top: 1.75rem;
-    font-size: 3.5rem;
   }
 }
 main nav a {
@@ -62,6 +54,16 @@ main nav a img {
   width: 6rem;
   object-fit: cover;
   margin-left: 1.25rem;
+}
+@media (max-width: 600px) {
+  main nav a img {
+    width: 3rem;
+  }
+}
+main nav #hamburger {
+  color: white;
+  font-size: 3.5rem;
+  margin-left: 13rem;
 }
 main .hero {
   display: flex;
