--- a/sass/input.scss
+++ b/sass/input.scss
@@ -15,6 +15,12 @@ main {
 
   .mobile-nav {
     display: none;
+
+    #menu-items {
+      display: none;
+      flex-direction: column;
+    }
+
     @include media.sm {
       display: flex;
     }
@@ -26,26 +32,15 @@ main {
     align-items: center;
     justify-content: center;
 
+    .navimages {
+      display: flex;
+      align-items: center;
+    }
+
     @include media.sm {
       flex-direction: column;
       align-items: flex-start;
       justify-content: flex-start;
-    }
-
-    input {
-      display: none;
-    }
-
-    label {
-      color: white;
-      display: none;
-      @include media.sm {
-        display: block;
-        position: absolute;
-        padding-left: 20rem;
-        padding-top: 1.75rem;
-        font-size: 3.5rem;
-      }
     }
 
     a {
@@ -59,7 +54,17 @@ main {
         width: 6rem;
         object-fit: cover;
         margin-left: 1.25rem;
+
+        @include media.sm {
+          width: 3rem;
+        }
       }
+    }
+
+    #hamburger {
+      color: white;
+      font-size: 3.5rem;
+      margin-left: 13rem;
     }
   }
 
