--- a/css/style.css
+++ b/css/style.css
@@ -16,10 +16,18 @@ main {
 }
 main .mobile-nav {
   display: none;
+  background-color: #1e1e1e;
 }
 main .mobile-nav #menu-items {
   display: none;
   flex-direction: column;
+}
+main .mobile-nav #menu-items .nav-item {
+  width: 100vw;
+  border-bottom: 3px solid white;
+  margin-left: 0;
+  padding-left: 1rem;
+  padding-bottom: 2rem;
 }
 @media (max-width: 600px) {
   main .mobile-nav {
@@ -76,12 +84,22 @@ main .hero h1 {
   font-size: 6rem;
   margin-top: 6rem;
 }
+@media (max-width: 600px) {
+  main .hero h1 {
+    font-size: 2rem;
+  }
+}
 main .hero p {
   width: 60%;
   color: white;
   font-family: sans-serif;
   margin: 0.5rem;
   text-align: center;
+}
+@media (max-width: 600px) {
+  main .hero p {
+    font-size: 0.75rem;
+  }
 }
 main .hero button {
   background-color: transparent;
