--- a/sass/input.scss
+++ b/sass/input.scss
@@ -127,23 +127,41 @@ main {
     font-size: 3rem;
     font-family: sans-serif;
     margin-top: 3rem;
+
+    @include media.sm {
+      font-size: 1.5rem;
+      margin: 1rem;
+      text-align: center;
+    }
   }
   p {
     width: 60%;
     font-family: sans-serif;
     margin: 0.5rem;
     text-align: center;
+
+    @include media.sm {
+      font-size: 0.75rem;
+    }
   }
 
   .flexbox {
     display: flex;
     flex-direction: row;
 
+    @include media.sm {
+      flex-direction: column;
+    }
+
     .point {
       width: 20rem;
       height: 20rem;
       background-color: gray;
       margin: 5rem;
+
+      @include media.sm {
+        margin: 1rem;
+      }
     }
   }
 }
@@ -155,17 +173,33 @@ main {
   align-items: center;
   justify-content: center;
 
+  @include media.sm {
+    padding-bottom: 1rem;
+    padding-top: 1rem;
+  }
+
   h1 {
     font-size: 3rem;
     font-family: sans-serif;
     margin-top: 3rem;
     margin-bottom: 2rem;
+
+    @include media.sm {
+      font-size: 1.5rem;
+      margin: 1rem;
+      text-align: center;
+    }
   }
 
   .flexbox {
     display: flex;
     flex-direction: row;
     margin-bottom: 3rem;
+
+    @include media.sm {
+      flex-direction: column;
+      margin: 0;
+    }
 
     div {
       display: flex;
@@ -178,12 +212,20 @@ main {
         height: 20rem;
         background-color: #1e1e1e;
         margin: 1rem 5rem;
+
+        @include media.sm {
+          margin: 1rem;
+        }
       }
 
       h3 {
         text-align: center;
         font-family: sans-serif;
         color: black;
+
+        @include media.sm {
+          font-size: 1rem;
+        }
       }
     }
   }
