made mobile menu floaty

--- a/css/style.css
+++ b/css/style.css
@@ -19,8 +19,11 @@ main .mobile-nav {
   background-color: #1e1e1e;
 }
 main .mobile-nav #menu-items {
+  margin-top: 8rem;
+  background-color: #1e1e1e;
   display: none;
   flex-direction: column;
+  position: absolute;
 }
 main .mobile-nav #menu-items .nav-item {
   width: 100vw;
