--- a/sass/input.scss
+++ b/sass/input.scss
@@ -233,3 +233,100 @@ main {
     }
   }
 }
+
+#donate {
+  display: flex;
+  flex-direction: column;
+  font-family: sans-serif;
+  h1 {
+    margin-top: 3rem;
+    font-family: sans-serif;
+    font-size: 3rem;
+    justify-self: center;
+    align-self: center;
+
+    @include media.sm {
+      font-size: 1.5rem;
+      margin-top: 1.5rem;
+    }
+  }
+
+  .money-box {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+
+    @include media.sm {
+      flex-direction: column;
+    }
+
+    .preset-dollar-box {
+      display: flex;
+      flex-direction: row;
+      align-items: center;
+
+      .dollar-buttons {
+        font-size: 1.5rem;
+        font-family: sans-serif;
+        align-items: center;
+        justify-content: center;
+        padding: 1rem;
+
+        background-color: #1e1e1e;
+        color: white;
+        align-self: center;
+        justify-self: center;
+        margin: 0.5rem;
+
+        @include media.sm {
+          font-size: 1rem;
+        }
+      }
+    }
+
+    p {
+      font-size: 2rem;
+      font-family: sans-serif;
+      margin: 3rem;
+      margin-left: 2rem;
+
+      @include media.sm {
+        font-size: 1rem;
+        margin-left: 0;
+        margin: 0.5rem;
+        justify-self: center;
+      }
+    }
+
+    .user-amount-box {
+      display: flex;
+      flex-direction: column;
+
+      input {
+        margin-top: 0.25rem;
+        height: 3.75rem;
+        width: 22rem;
+      }
+
+      label {
+        margin-top: 0.5rem;
+
+        @include media.sm {
+          margin-bottom: 0.5rem;
+        }
+      }
+    }
+  }
+
+  .section-underline {
+    width: 60%;
+    align-self: center;
+    background-color: #1e1e1e;
+    height: 3px;
+
+    @include media.sm {
+      width: 95%;
+    }
+  }
+}
