--- a/sass/input.scss
+++ b/sass/input.scss
@@ -1,11 +1,25 @@
 @use "media-query" as media;
 @use "reset";
 
+@font-face {
+  font-family: "Montserrat";
+  src: url(../fonts/Montserrat-Regular.otf);
+  font-family: "Bebas Nue";
+  src: url(../fonts/BebasNeue-Regular.ttf);
+}
+
 main {
   // Replace color later with background image
-  background-color: #1e1e1e;
+  background-image: url("./../images/hero.png");
+
+  background-repeat: no-repeat;
+
   display: flex;
   flex-direction: column;
+
+  @include media.sm {
+    background-image: none;
+  }
 
   .desktop-nav {
     @include media.sm {
@@ -15,11 +29,11 @@ main {
 
   .mobile-nav {
     display: none;
-    background-color: #1e1e1e;
+    background-color: #ec1e24;
 
     #menu-items {
       margin-top: 8rem;
-      background-color: #1e1e1e;
+      background-color: #ec1e24;
       display: none;
       flex-direction: column;
       position: absolute;
@@ -58,9 +72,9 @@ main {
     a {
       margin: 1rem;
       text-decoration: none;
-      font-family: sans-serif;
+      font-family: "Montserrat";
       color: white;
-      font-size: 1.25rem;
+      font-size: 1rem;
 
       img {
         width: 6rem;
@@ -83,39 +97,58 @@ main {
   .hero {
     display: flex;
     flex-direction: column;
-    align-items: center;
+
+    @include media.sm {
+      background-image: url("../images/hero-mobile.png");
+      background-size: cover;
+      background-position: center;
+    }
 
     h1 {
-      font-family: sans-serif;
-      color: white;
-      font-size: 6rem;
-      margin-top: 6rem;
+      font-family: "Bebas Nue";
+      color: #ec1e24;
+      font-size: 9rem;
+      margin-top: 8rem;
+      margin-left: 1rem;
+      line-height: 80%;
 
       @include media.sm {
-        font-size: 2rem;
+        margin-top: 4rem;
+        font-size: 4.5rem;
+        color: white;
       }
     }
     p {
-      width: 60%;
-      color: white;
-      font-family: sans-serif;
+      margin-left: 2rem;
+      width: 30%;
+      color: black;
+      font-family: "Montserrat";
+      font-size: 1rem;
       margin: 0.5rem;
-      text-align: center;
+      margin-left: 1rem;
+      text-align: left;
 
       @include media.sm {
         font-size: 1rem;
+        margin-top: 15rem;
+        width: 55%;
       }
     }
 
     button {
       background-color: transparent;
-      opacity: 50%;
-      color: white;
-      font-size: 1.5rem;
-      border: 3px solid white;
+      color: #ec1e24;
+      font-family: "Montserrat";
+      font-size: 1rem;
+      border: 3px solid #ec1e24;
       padding: 1rem 2rem;
-      margin-top: 1rem;
+      margin-top: 0.5rem;
       margin-bottom: 10rem;
+      margin-left: 1rem;
+
+      @include media.sm {
+        padding: 1rem 6rem;
+      }
     }
   }
 }
