--- a/css/style.css
+++ b/css/style.css
@@ -7,6 +7,8 @@
 @font-face {
   font-family: "Montserrat";
   src: url(../fonts/Montserrat-Regular.otf);
+}
+@font-face {
   font-family: "Bebas Nue";
   src: url(../fonts/BebasNeue-Regular.ttf);
 }
@@ -145,6 +147,8 @@ main .hero button {
 @media (max-width: 600px) {
   main .hero button {
     padding: 1rem 6rem;
+    margin-left: 0;
+    align-self: center;
   }
 }
 
