--- a/sass/input.scss
+++ b/sass/input.scss
@@ -4,6 +4,9 @@
 @font-face {
   font-family: "Montserrat";
   src: url(../fonts/Montserrat-Regular.otf);
+}
+
+@font-face {
   font-family: "Bebas Nue";
   src: url(../fonts/BebasNeue-Regular.ttf);
 }
@@ -148,6 +151,8 @@ main {
 
       @include media.sm {
         padding: 1rem 6rem;
+        margin-left: 0;
+        align-self: center;
       }
     }
   }
