--- a/css/style.css
+++ b/css/style.css
@@ -5,10 +5,6 @@
 }
 
 @font-face {
-  font-family: "Montserrat";
-  src: url(../fonts/Montserrat-Regular.otf);
-}
-@font-face {
   font-family: "Bebas Nue";
   src: url(../fonts/BebasNeue-Regular.ttf);
 }
@@ -128,9 +124,9 @@ main .hero p {
 }
 @media (max-width: 600px) {
   main .hero p {
-    font-size: 1rem;
-    margin-top: 15rem;
-    width: 55%;
+    font-size: 0.8rem;
+    margin-top: 10rem;
+    width: 50%;
   }
 }
 main .hero button {
@@ -146,8 +142,8 @@ main .hero button {
 }
 @media (max-width: 600px) {
   main .hero button {
-    padding: 1rem 6rem;
-    margin-left: 0;
+    padding: 1rem 6.5rem;
+    margin-left: 1rem;
     align-self: center;
   }
 }
