--- a/css/style.css
+++ b/css/style.css
@@ -101,8 +101,8 @@ main .hero h1 {
   font-family: "Bebas Nue";
   color: #ec1e24;
   font-size: 9rem;
-  margin-top: 8rem;
-  margin-left: 1rem;
+  margin-top: 10rem;
+  margin-left: 3rem;
   line-height: 80%;
 }
 @media (max-width: 600px) {
@@ -119,13 +119,14 @@ main .hero p {
   font-family: "Montserrat";
   font-size: 1rem;
   margin: 0.5rem;
-  margin-left: 1rem;
+  margin-left: 3rem;
   text-align: left;
 }
 @media (max-width: 600px) {
   main .hero p {
     font-size: 0.8rem;
     margin-top: 10rem;
+    margin-left: 1rem;
     width: 50%;
   }
 }
@@ -138,13 +139,14 @@ main .hero button {
   padding: 1rem 2rem;
   margin-top: 0.5rem;
   margin-bottom: 10rem;
-  margin-left: 1rem;
+  margin-left: 3rem;
 }
 @media (max-width: 600px) {
   main .hero button {
     padding: 1rem 6.5rem;
     margin-left: 1rem;
     align-self: center;
+    margin-bottom: 7rem;
   }
 }
 
@@ -155,26 +157,29 @@ main .hero button {
   justify-content: center;
 }
 #about h1 {
-  font-size: 3rem;
-  font-family: sans-serif;
-  margin-top: 3rem;
+  font-size: 5rem;
+  font-family: "Bebas Nue";
+  margin-top: 2rem;
+  color: #ec1e24;
 }
 @media (max-width: 600px) {
   #about h1 {
-    font-size: 1.5rem;
+    font-size: 2.5rem;
     margin: 1rem;
+    margin-top: 0;
     text-align: center;
   }
 }
 #about p {
   width: 60%;
-  font-family: sans-serif;
+  font-family: "Montserrat";
   margin: 0.5rem;
   text-align: center;
 }
 @media (max-width: 600px) {
   #about p {
-    font-size: 1rem;
+    font-size: 0.8rem;
+    width: 80%;
   }
 }
 #about .flexbox {
