--- a/css/style.css
+++ b/css/style.css
@@ -108,8 +108,9 @@ main .hero h1 {
 @media (max-width: 600px) {
   main .hero h1 {
     margin-top: 4rem;
-    font-size: 4.5rem;
+    font-size: 4rem;
     color: white;
+    margin-left: 1rem;
   }
 }
 main .hero p {
