--- a/sass/input.scss
+++ b/sass/input.scss
@@ -112,8 +112,9 @@ main {
 
       @include media.sm {
         margin-top: 4rem;
-        font-size: 4.5rem;
+        font-size: 4rem;
         color: white;
+        margin-left: 1rem;
       }
     }
     p {
