--- a/sass/input.scss
+++ b/sass/input.scss
@@ -111,7 +111,7 @@ main {
       line-height: 80%;
 
       @include media.sm {
-        // margin-top: 9rem;
+        margin-top: 9rem;
         font-size: 4rem;
         color: white;
         margin-left: 1rem;
