--- a/css/style.css
+++ b/css/style.css
@@ -17,6 +17,7 @@ main {
 @media (max-width: 600px) {
   main {
     background-image: none;
+    background-color: #ec1e24;
   }
 }
 @media (max-width: 600px) {
@@ -95,6 +96,7 @@ main .hero {
     background-image: url("../images/hero-mobile.png");
     background-size: cover;
     background-position: center;
+    margin-top: 3rem;
   }
 }
 main .hero h1 {
@@ -107,7 +109,6 @@ main .hero h1 {
 }
 @media (max-width: 600px) {
   main .hero h1 {
-    margin-top: 9rem;
     font-size: 4rem;
     color: white;
     margin-left: 1rem;
