--- a/sass/input.scss
+++ b/sass/input.scss
@@ -101,7 +101,7 @@ main {
       background-image: url("../images/hero-mobile.png");
       background-size: cover;
       background-position: center;
-      margin-top: 3rem;
+      // margin-top: 3rem;
       background-color: white;
     }
 
