--- a/css/style.css
+++ b/css/style.css
@@ -8,6 +8,10 @@
   font-family: "Bebas Nue";
   src: url(../fonts/BebasNeue-Regular.ttf);
 }
+a {
+  text-decoration: none;
+}
+
 main {
   background-image: url("./../images/hero.png");
   background-repeat: no-repeat;
@@ -228,7 +232,7 @@ main .hero button {
 }
 
 #news {
-  background-color: gray;
+  background-color: #ec1e24;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -241,14 +245,15 @@ main .hero button {
   }
 }
 #news h1 {
-  font-size: 3rem;
-  font-family: sans-serif;
+  font-size: 5rem;
+  font-family: "Bebas Nue";
   margin-top: 3rem;
   margin-bottom: 2rem;
+  color: white;
 }
 @media (max-width: 600px) {
   #news h1 {
-    font-size: 1.5rem;
+    font-size: 2.5rem;
     margin: 1rem;
     text-align: center;
   }
@@ -271,6 +276,7 @@ main .hero button {
   justify-content: center;
 }
 #news .flexbox div .point {
+  object-fit: cover;
   width: 20rem;
   height: 20rem;
   background-color: #1e1e1e;
@@ -283,12 +289,16 @@ main .hero button {
 }
 #news .flexbox div h3 {
   text-align: center;
+  align-self: center;
   font-family: sans-serif;
-  color: black;
+  color: white;
+  font-size: 1rem;
+  font-family: "Montserrat";
 }
 @media (max-width: 600px) {
   #news .flexbox div h3 {
     font-size: 1rem;
+    margin-bottom: 1rem;
   }
 }
 
