--- a/sass/input.scss
+++ b/sass/input.scss
@@ -6,6 +6,10 @@
   src: url(../fonts/BebasNeue-Regular.ttf);
 }
 
+a {
+  text-decoration: none;
+}
+
 main {
   // Replace color later with background image
   background-image: url("./../images/hero.png");
@@ -238,7 +242,7 @@ main {
 }
 
 #news {
-  background-color: gray;
+  background-color: #ec1e24;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -250,13 +254,14 @@ main {
   }
 
   h1 {
-    font-size: 3rem;
-    font-family: sans-serif;
+    font-size: 5rem;
+    font-family: "Bebas Nue";
     margin-top: 3rem;
     margin-bottom: 2rem;
+    color: white;
 
     @include media.sm {
-      font-size: 1.5rem;
+      font-size: 2.5rem;
       margin: 1rem;
       text-align: center;
     }
@@ -279,8 +284,10 @@ main {
       justify-content: center;
 
       .point {
+        object-fit: cover;
         width: 20rem;
         height: 20rem;
+
         background-color: #1e1e1e;
         margin: 1rem 5rem;
 
@@ -291,11 +298,15 @@ main {
 
       h3 {
         text-align: center;
+        align-self: center;
         font-family: sans-serif;
-        color: black;
+        color: white;
+        font-size: 1rem;
+        font-family: "Montserrat";
 
         @include media.sm {
           font-size: 1rem;
+          margin-bottom: 1rem;
         }
       }
     }
