--- a/sass/_media-query.scss
+++ b/sass/_media-query.scss
@@ -1,5 +1,5 @@
-@mixin sm{
-    @media (max-width: "600px"){
-        @content
-    }
+@mixin sm {
+  @media (max-width: "600px") {
+    @content;
+  }
 }
