--- a/sass/input.scss
+++ b/sass/input.scss
@@ -13,8 +13,9 @@ a {
 main {
   // Replace color later with background image
   background-image: url("./../images/hero.png");
-
   background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
 
   display: flex;
   flex-direction: column;
@@ -25,6 +26,7 @@ main {
   }
 
   .desktop-nav {
+    z-index: 1;
     @include media.sm {
       display: none;
     }
@@ -114,7 +116,7 @@ main {
       font-family: "Bebas Nue";
       color: #ec1e24;
       font-size: 9rem;
-      margin-top: 10rem;
+      margin-top: 20rem;
       margin-left: 3rem;
       line-height: 80%;
 
@@ -166,6 +168,7 @@ main {
 }
 
 #about {
+  background-color: #fff;
   display: flex;
   flex-direction: column;
   align-items: center;
