--- a/css/style.css
+++ b/css/style.css
@@ -198,6 +198,7 @@ main .hero button {
 #about .flexbox {
   display: flex;
   flex-direction: row;
+  margin-bottom: 10rem;
 }
 @media (max-width: 600px) {
   #about .flexbox {
@@ -315,10 +316,11 @@ main .hero button {
 }
 #donate h1 {
   margin-top: 3rem;
-  font-family: sans-serif;
-  font-size: 3rem;
+  font-family: "Bebas Nue";
+  font-size: 5rem;
   justify-self: center;
   align-self: center;
+  color: #ec1e24;
 }
 @media (max-width: 600px) {
   #donate h1 {
@@ -344,11 +346,13 @@ main .hero button {
 }
 #donate .money-box .preset-dollar-box .dollar-buttons {
   font-size: 1.5rem;
-  font-family: sans-serif;
+  font-family: "Montserrat";
   align-items: center;
   justify-content: center;
-  padding: 1rem;
-  background-color: #1e1e1e;
+  width: 4rem;
+  height: 4rem;
+  border: none;
+  background-color: #000;
   color: white;
   align-self: center;
   justify-self: center;
@@ -361,8 +365,8 @@ main .hero button {
   }
 }
 #donate .money-box p {
-  font-size: 2rem;
-  font-family: sans-serif;
+  font-size: 1.5rem;
+  font-family: "Montserrat";
   margin: 3rem;
   margin-left: 2rem;
 }
@@ -377,9 +381,10 @@ main .hero button {
 #donate .money-box .user-amount-box {
   display: flex;
   flex-direction: column;
+  justify-content: center;
 }
 #donate .money-box .user-amount-box input {
-  margin-top: 0.25rem;
+  margin-top: 1.1rem;
   height: 3.75rem;
   width: 25rem;
 }
@@ -390,6 +395,7 @@ main .hero button {
 }
 #donate .money-box .user-amount-box label {
   margin-top: 0.5rem;
+  font-family: "Montserrat";
 }
 @media (max-width: 600px) {
   #donate .money-box .user-amount-box label {
@@ -399,7 +405,7 @@ main .hero button {
 #donate .section-underline {
   width: 60%;
   align-self: center;
-  background-color: #1e1e1e;
+  background-color: #ec1e24;
   height: 3px;
 }
 @media (max-width: 600px) {
@@ -420,7 +426,7 @@ main .hero button {
   }
 }
 #donate .information .name-address {
-  margin-right: 8rem;
+  margin-right: 7.35rem;
   display: flex;
   flex-direction: column;
 }
@@ -442,6 +448,7 @@ main .hero button {
 }
 #donate .information .name-address label {
   margin-top: 0.5rem;
+  font-family: "Montserrat";
 }
 @media (max-width: 600px) {
   #donate .information .name-address label {
@@ -501,6 +508,7 @@ main .hero button {
 }
 #donate .information .email-phoneNumber label {
   margin-top: 0.5rem;
+  font-family: "Montserrat";
 }
 @media (max-width: 600px) {
   #donate .information .email-phoneNumber label {
@@ -534,16 +542,19 @@ main .hero button {
   }
 }
 #donate .donate-button-checkbox button {
+  background-color: transparent;
+  color: #ec1e24;
+  font-family: "Montserrat";
+  font-size: 1rem;
+  border: 3px solid #ec1e24;
   padding: 1rem 3rem;
-  color: black;
-  font-family: sans-serif;
-  font-size: 1.25rem;
   margin: 1rem;
-  margin-right: 0;
 }
 @media (max-width: 600px) {
   #donate .donate-button-checkbox button {
-    padding: 1rem 8rem;
+    padding: 1rem 7rem;
+    align-self: center;
+    justify-self: center;
   }
 }
 
