--- a/css/style.css
+++ b/css/style.css
@@ -324,8 +324,8 @@ main .hero button {
 }
 @media (max-width: 600px) {
   #donate h1 {
-    font-size: 1.5rem;
-    margin-top: 1.5rem;
+    font-size: 2.5rem;
+    margin: 1rem;
   }
 }
 #donate .money-box {
@@ -361,7 +361,8 @@ main .hero button {
 @media (max-width: 600px) {
   #donate .money-box .preset-dollar-box .dollar-buttons {
     font-size: 1rem;
-    padding: 0.5rem;
+    width: 3rem;
+    height: 3rem;
   }
 }
 #donate .money-box p {
@@ -372,7 +373,7 @@ main .hero button {
 }
 @media (max-width: 600px) {
   #donate .money-box p {
-    font-size: 1rem;
+    font-size: 1.5rem;
     margin-left: 0;
     margin: 0.5rem;
     justify-self: center;
@@ -399,7 +400,7 @@ main .hero button {
 }
 @media (max-width: 600px) {
   #donate .money-box .user-amount-box label {
-    margin-bottom: 0.5rem;
+    margin-bottom: 1rem;
   }
 }
 #donate .section-underline {
@@ -482,6 +483,7 @@ main .hero button {
   height: 3.75rem;
   margin: 0.5rem;
   width: 6rem;
+  font-family: "Montserrat";
 }
 #donate .information .name-address .city-state-zip .zip {
   display: flex;
@@ -519,7 +521,7 @@ main .hero button {
   display: flex;
   flex-direction: column;
   align-items: flex-end;
-  margin-right: 18rem;
+  margin-right: 27rem;
   margin-top: 2rem;
 }
 @media (max-width: 600px) {
@@ -549,6 +551,7 @@ main .hero button {
   border: 3px solid #ec1e24;
   padding: 1rem 3rem;
   margin: 1rem;
+  margin-right: 0;
 }
 @media (max-width: 600px) {
   #donate .donate-button-checkbox button {
