--- a/sass/input.scss
+++ b/sass/input.scss
@@ -330,8 +330,8 @@ main {
     color: #ec1e24;
 
     @include media.sm {
-      font-size: 1.5rem;
-      margin-top: 1.5rem;
+      font-size: 2.5rem;
+      margin: 1rem;
     }
   }
 
@@ -366,7 +366,8 @@ main {
 
         @include media.sm {
           font-size: 1rem;
-          padding: 0.5rem;
+          width: 3rem;
+          height: 3rem;
         }
       }
     }
@@ -378,7 +379,7 @@ main {
       margin-left: 2rem;
 
       @include media.sm {
-        font-size: 1rem;
+        font-size: 1.5rem;
         margin-left: 0;
         margin: 0.5rem;
         justify-self: center;
@@ -406,7 +407,7 @@ main {
         font-family: "Montserrat";
 
         @include media.sm {
-          margin-bottom: 0.5rem;
+          margin-bottom: 1rem;
         }
       }
     }
@@ -491,6 +492,7 @@ main {
             height: 3.75rem;
             margin: 0.5rem;
             width: 6rem;
+            font-family: "Montserrat";
           }
         }
 
@@ -536,7 +538,7 @@ main {
     display: flex;
     flex-direction: column;
     align-items: flex-end;
-    margin-right: 18rem;
+    margin-right: 27rem;
     margin-top: 2rem;
 
     @include media.sm {
@@ -566,6 +568,7 @@ main {
       border: 3px solid #ec1e24;
       padding: 1rem 3rem;
       margin: 1rem;
+      margin-right: 0;
 
       @include media.sm {
         padding: 1rem 7rem;
