--- a/css/style.css
+++ b/css/style.css
@@ -577,6 +577,64 @@ main .hero button {
   }
 }
 
+/* The Modal (background) */
+.modal {
+  display: none; /* Hidden by default */
+  position: fixed; /* Stay in place */
+  z-index: 1; /* Sit on top */
+  left: 0;
+  top: 0;
+  width: 100%; /* Full width */
+  height: 100%; /* Full height */
+  overflow: auto; /* Enable scroll if needed */
+  background-color: rgb(0, 0, 0); /* Fallback color */
+  background-color: rgba(0, 0, 0, 0.4); /* Black w/ opacity */
+}
+
+/* Modal Content/Box */
+.modal-content {
+  text-align: center;
+  color: #fff;
+  background-color: #ec1e24;
+  margin: 15% auto; /* 15% from the top and centered */
+  padding: 20px;
+  border: 1px solid #888;
+  width: 60%; /* Could be more or less, depending on screen size */
+  font-family: "Bebas Nue";
+  font-size: 3rem;
+}
+@media (max-width: 600px) {
+  .modal-content {
+    width: 90%;
+    font-size: 1.5rem;
+  }
+}
+.modal-content span {
+  font-family: "Montserrat";
+  font-size: 1rem;
+}
+@media (max-width: 600px) {
+  .modal-content span {
+    font-size: 0.75rem;
+  }
+}
+
+/* The Close Button */
+.close {
+  color: #fff;
+  float: right;
+  margin-left: auto;
+  font-size: 28px;
+  font-weight: bold;
+}
+
+.close:hover,
+.close:focus {
+  color: black;
+  text-decoration: none;
+  cursor: pointer;
+}
+
 footer {
   background-color: #ec1e24;
   font-family: "Montserrat";
