tiny tweak of the donation form

--- a/css/style.css
+++ b/css/style.css
@@ -492,7 +492,8 @@ main .hero button {
   width: 6rem;
   font-family: "Montserrat";
   background-color: transparent;
-  border-radius: 0;
+  border: 1px solid #888;
+  border-radius: 2px;
   text-decoration: none;
 }
 #donate .information .name-address .city-state-zip .zip {
